--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,46 @@
 /*header*/
 
 
+.header-container{
+  width: 100vw;
+  height: 100vh;
+  background-image: url('./img/header.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  filter: grayscale(0.2);
+  
+}
+
+.header-info{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 3rem;
+  background-color: rgba(0, 0, 0, 0.582);
+  color:white;
+ 
+}
+
+.header-info h1{
+
+}
+
+.header-info button{
+  margin: 20px;
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.216);
+  color:white;
+  width: 20%;
+  font-size: 30px;
+  cursor: pointer;
+  transition: 0.6s ease;
+
+}
+
+.header-info button:hover{
+  background-color: rgba(0, 0, 0, 0.521);
+}
