--- a/src/App.css
+++ b/src/App.css
@@ -76,11 +76,12 @@
 
 .header-info button{
   margin: 20px;
+  padding: 10px;
+  letter-spacing: 2px;
   border: 2px solid black;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.216);
   color:white;
-  width: 20%;
   font-size: 30px;
   cursor: pointer;
   transition: 0.6s ease;
