--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,35 @@
 
 /*nav*/
 
+.head-nav-container{
+  background-color: #232323;
+  color:white;
+  display: flex;
+  flex-direction: column;
+  
+}
+
+
+
+.head-nav-container ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  list-style: none; 
+
+}
+
+.head-nav-container ul li{
+  flex-basis: 300px;
+  padding: 10px;
+  border-right: 1px solid white;
+}
+
+.head-nav-container ul li i{
+  margin-right: 5px;
+}
+
 .nav-container{
   display: flex;
   flex-direction: row;
