--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   color:white;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   
 }
 
@@ -22,6 +23,7 @@
   justify-content: center;
   align-items: center;
   list-style: none; 
+  width: 100%;
 
 }
 
