--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,8 @@
   flex-basis: 20%;
   padding: 10px;
   border-right: 1px solid white;
+  text-align: center;
+  color: rgb(94, 221, 173);
 }
 
 .head-nav-container ul li i{
@@ -44,6 +46,7 @@
   align-items: center;
   background-color: rgb(239, 239, 239);
   gap:20px;
+  
 }
 
 
@@ -121,4 +124,28 @@
 
 .header-info button:hover{
   background-color: rgba(0, 0, 0, 0.521);
+}
+
+
+/*main*/
+
+.main-container{
+
+}
+
+.main-items{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.main-item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  width: 30%;
 }
