--- a/src/App.css
+++ b/src/App.css
@@ -167,12 +167,16 @@
   width: 100%;
   height: 100%;
   margin: 50px;
-  border: 2px solid black;
+  
+}
+
+.main-img p{
+  font-size: 1.6rem;
 }
 
 .main-img img{
   object-fit: cover;
-  width: 30vw;
+  width: 50vw;
 }
 
 
