--- a/src/App.css
+++ b/src/App.css
@@ -179,4 +179,40 @@
   width: 50vw;
 }
 
+/* tours  */
+
+.tours-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.tours-grid{
+  margin-top:50px;
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  
+}
+
+.tour-item{
+  width: 30vw;
+  text-align: center;
+  padding: 20px;
+}
+
+.tour-item img{
+  width: 100%;
+  height: 300px;
+  object-fit:cover;
+}
+
+.tour-item h3{
+  
+}
+
+
 
