--- a/src/App.css
+++ b/src/App.css
@@ -208,11 +208,15 @@
   width: 100%;
   height: 300px;
   object-fit:cover;
+  border: 2px solid rgb(84, 221, 10);
+  border-radius: 100px;
+  padding: 10px;
+  transition: 0.6s ease;
 }
 
-.tour-item h3{
+.tour-item img:hover{
+  padding: 0;
   
 }
-
 
 
