--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root{
+  --main-color:rgb(94, 221, 173);
+  
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -160,6 +165,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 50px;
+  background-color: var(--main-color);
   
 }
 
@@ -177,6 +183,19 @@
 .main-img img{
   object-fit: cover;
   width: 50vw;
+}
+
+.main-count{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 2.2rem;
+  
+}
+.count-item{
+  text-align: center;
 }
 
 /* tours  */
@@ -208,7 +227,7 @@
   width: 100%;
   height: 300px;
   object-fit:cover;
-  border: 2px solid rgb(84, 221, 10);
+  border: 2px solid rgb(94, 221, 173);
   border-radius: 100px;
   padding: 10px;
   transition: 0.6s ease;
