--- a/src/App.css
+++ b/src/App.css
@@ -192,9 +192,17 @@
   align-items: center;
   gap: 10px;
   font-size: 2.2rem;
+  margin-top: 50px;
+  margin-bottom: 150px;
   
 }
+
 .count-item{
+  border-radius: 20px;
+  padding: 20px;
+  background-color: var(--main-color);
+  box-shadow: 2px 2px 2px black;
+  color:white;
   text-align: center;
 }
 
