--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,17 @@
 /*main*/
 
 .main-container{
+  position: relative;
+}
+
+.main-container i{
+  position: absolute;
+  top:10px;
+  border: 2px solid var(--main-color);
+  padding: 50px;
+  border-radius: 50px;
+  z-index: 200;
+  background-color: white;
 
 }
 
@@ -169,6 +180,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 
 }
 
@@ -181,6 +193,9 @@
   margin-top: 50px;
   text-align: center;
   padding: 30px;
+  border: 2px solid var(--main-color);
+  border-radius: 10px;
+  
   
   
 }
