--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
   filter: grayscale(0.2);
   overflow: hidden;
   
@@ -162,6 +163,7 @@
 
 .main-container{
   position: relative;
+  margin-top: 50px;
 }
 
 .main-container i{
@@ -198,6 +200,10 @@
   
   
   
+}
+
+.main-item h3{
+  margin-top:50px;
 }
 
 .main-item p{
