--- a/src/App.css
+++ b/src/App.css
@@ -365,6 +365,7 @@
 
 .tour-header{
   text-align: center;
+  padding: 10px;
 }
 
 .tour-main{
@@ -377,20 +378,21 @@
 }
 
 .tour-img{
-  width: 40%;
-  height: 70%;
+  width: 50%;
+ 
 
+}
+
+.tour-img img{
+  width: 100%;
+  height: 400px;
 }
 
 .tour-info{
-  width: 60%;
+  width: 50%;
 }
 
-.tour-main img{
-  width: 100%;
-  object-fit:cover;
-  
-}
+
 
 .img{
   display: flex;
