--- a/src/App.css
+++ b/src/App.css
@@ -414,6 +414,7 @@
 .tour-img img{
   width: 100%;
   height: 400px;
+  object-fit: cover;
 }
 
 .tour-info{
@@ -430,6 +431,7 @@
 
 .img img{
   width: 24%;
+  object-fit: cover;
 }
 
 
