--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 /*nav*/
@@ -389,6 +390,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: auto 10%;
 }
 
 .tour-header{
@@ -408,6 +410,16 @@
 .tour-img{
   width: 50%;
  
+
+}
+
+.tour-rate{
+  border: 1px solid var(--font-color);
+  text-align: center;
+  width: 20%;
+}
+
+.tour-rate p{
 
 }
 
