--- a/src/App.css
+++ b/src/App.css
@@ -587,6 +587,15 @@
     flex-direction: column;
    }
 
+   .tour-header{
+    text-align: center;
+    padding: 10px;
+    background-color: var(--main-color);
+    margin: 10px;
+    border: 2px solid black;
+    border-radius: 20px;
+   }
+
    .tour-img{
     width: auto;
    }
