--- a/src/App.css
+++ b/src/App.css
@@ -302,6 +302,15 @@
   padding: 20px;
 }
 
+.tour-header{
+  text-align: center;
+  padding: 5px;
+  background-color: var(--main-color);
+  margin: 10px;
+  border: 2px solid black;
+  border-radius: 20px;
+ }
+
 .tour-item img{
   width: 100%;
   height: 300px;
@@ -520,6 +529,7 @@
 
 .ticket-info{
   flex-basis: 50%;
+  padding: 20px;
 }
 
 .ticket-img img{
