--- a/src/App.css
+++ b/src/App.css
@@ -542,6 +542,18 @@
   object-fit: cover;
 }
 
+.form-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.form-container input{
+  
+}
+
 
 
 @media screen and (max-width:460px) {
