--- a/src/App.css
+++ b/src/App.css
@@ -551,6 +551,13 @@
 }
 
 .form-container input{
+  margin: 10px;
+  border-radius: 10px;
+  line-height: 30px;
+  padding: 5px;
+}
+
+.form-container label{
   
 }
 
