--- a/src/App.css
+++ b/src/App.css
@@ -557,8 +557,15 @@
   padding: 5px;
 }
 
-.form-container label{
-  
+.form-container p{
+  margin: auto;
+
+}
+
+.form-container button{
+  padding: 10px;
+  border-radius: 10px;
+  width: 100px;
 }
 
 
