add new function

--- a/src/App.css
+++ b/src/App.css
@@ -522,6 +522,10 @@
   border-bottom: 2px solid var(--main-color);
 }
 
+.price-container h2{
+  text-align: center;
+}
+
 .ticket-container{
   display: flex;
 }
