--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,21 @@
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+/*whatup*/
+
+.whatsup{
+  position: fixed;
+  bottom: 100px;
+  right: 50px;
+  color:rgb(0, 255, 17);
+  z-index: 20000;
+
+}
+
+.fa-2xl{
+  font-size: 5rem;
+}
+
 /*nav*/
 
 .head-nav-container{
