--- a/src/App.css
+++ b/src/App.css
@@ -279,6 +279,11 @@
   
 }
 
+.voucher-container{
+  /* font-family: "Bebas Neue" , sans-serif;
+  font-weight: 400; */
+}
+
 .count-item{
   border-radius: 20px;
   padding: 20px;
