--- a/src/App.css
+++ b/src/App.css
@@ -247,7 +247,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 50px;
-  background-color: var(--main-color);
+  /* background-color: var(--main-color); */
   
 }
 
@@ -266,6 +266,8 @@
 .main-img img{
   object-fit: cover;
   width: 50vw;
+  border-radius: 10px;
+
 }
 
 .main-count{
@@ -545,6 +547,7 @@
   width: 100%;
   object-fit: contain;
   padding: 10px;
+  filter: blur(0.4px);
   
 }
 
@@ -552,6 +555,7 @@
   width: 100%;
   height: 400px;
   object-fit:cover;
+  
 }
 
 .tour-info{
