--- a/src/App.css
+++ b/src/App.css
@@ -247,6 +247,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 50px;
+  margin: auto 30px;
   /* background-color: var(--main-color); */
   
 }
