--- a/src/App.css
+++ b/src/App.css
@@ -106,8 +106,9 @@
 .nav-elements li a{
   text-decoration: none;
   color:black;
-  /* font-weight: 800; */
   color:white;
+        border: 1px solid white;
+
 }
 
 /*Link*/
@@ -222,7 +223,7 @@
   margin-top: 50px;
   text-align: center;
   padding: 30px;
-  border: 2px solid var(--main-color);
+  /* border: 2px solid var(--main-color); */
   border-radius: 10px;
   
   
