--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,19 @@
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+/*hover mode*/
+
+.hover-mode{
+  width: 100%;
+  height: 100%;
+  background-color: #32323266;
+  
+}
+
+.hover-mode::before{
+  content: attr('MAP');
+}
+
 /*whatup*/
 
 .whatsup{
