--- a/src/App.css
+++ b/src/App.css
@@ -14,16 +14,7 @@
 
 /*hover mode*/
 
-.hover-mode{
-  width: 100%;
-  height: 100%;
-  background-color: #32323266;
-  
-}
 
-.hover-mode::before{
-  content: attr('MAP');
-}
 
 /*whatup*/
 
@@ -541,6 +532,9 @@
   padding: 3px;
 }
 
+
+
+
 .rate{
   border: 1px solid var(--font-color);
   background-color: rgb(49, 49, 255);
@@ -556,12 +550,30 @@
   padding: 6px;
 }
 
+.tour-rate a{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+
+
 .map{
   width: 100%;
   object-fit: contain;
   padding: 10px;
   filter: blur(0.4px);
+  filter: grayscale(0);
+  opacity: 0;
+  transition: 0.5s ease;
   
+}
+
+.map:hover{
+  filter: grayscale(1);
+  filter: saturate(0);
+  transform: scale(1.1);
+  opacity: 1;
 }
 
 .tour-img img{
