--- a/src/App.css
+++ b/src/App.css
@@ -556,6 +556,18 @@
   height: 100%;
 }
 
+.tour-rate a p{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-decoration: none;
+  color:#232323;
+  font-size: large;
+}
+
 
 
 .map{
@@ -565,7 +577,7 @@
   filter: blur(0.4px);
   filter: grayscale(0);
   opacity: 0;
-  transition: 0.5s ease;
+  transition: 0.8s ease;
   
 }
 
